fixing uneven spacing between left and right side cards of skills section

--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,11 @@ footer{
 
 @media screen and (min-width: 670px){
 
+  #skills{
+    padding-left: 25px;
+  }
+
+
   #projects [class^=col]{
     margin: 0;
   }
